# build-ai-automation-workflow

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
bebop/: .gitignore  README.md  run-briefing.sh
council/: README.md  __init__.py  cli.py  compare.py  config.py  engine.py  gate.py  jsonparse.py  models.py  panels.toml  prompts.py  render.py  review.py  router.py  routing.py  sweep.py  synthesize.py  venice.py
diem/: README.md  balance.py  cli.py  config.py  discover.py  drain.py  queue.py  report.py  runners.py  state.py  usage.py
docs/: 2026-06-16-overnight-build-report.md  ARCHITECTURE.md  DAILY-LOOP.md  MAC-MINI-SETUP.md  MESH-ONLY-LOCKDOWN.md  MIGRATION.md  OVERVIEW-short.md  OVERVIEW.md  TAILSCALE.md  context-retrieval-2026-07-23.md  council-audit-2026-06-25.md  council-regression-2026-07-23.md  harness-engineering-HANDOFF.md  harness-engineering-assessment-2026-07-20.md  sample-note.md  skill-writing-techniques.md  venice-review-shim-audit-2026-07-23.md
fixit/: .gitignore  README.md  __init__.py  queue.py  run-fixit.sh
loom/: .gitignore  README.md  autopromote.py  backends.py  cli.py  crontab.snippet  discovery.py  fingerprint.py  gate.py  gitio.py  headless-settings.json  indexer.py  ledger.py  llm.py  pending.py  promote.py  route.py  run-absorb.sh  run.py  sentinel.py  setup-runtime.sh  setup-wiki.sh  spool.py  state.py  summary.py  transcript.py  venice.py  weave.py  weave_lint.py
scratch/: sample.py  sample_for_review.py
scripts/: audit-projects.sh  migrate-project.sh  venice_review.py
sessiongc/: README.md  cli.py
setup/: PLAYBOOK.md  bootstrap-vps.sh  harden-mesh-only.sh
tests/: conftest.py  test_acceptance_audit.py  test_cli.py  (+18 more)
(+81 files in other folders)
