[project]
name = "council"
version = "0.4.0"
description = "Multi-model Venice AI council: ask / review / panels"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
council = "council.cli:main"
diem = "diem.cli:main"
session-gc = "sessiongc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["council", "diem", "sessiongc"]

[tool.setuptools.package-data]
council = ["panels.toml"]

[tool.pytest.ini_options]
pythonpath = ["."]
